Revision history for libcif

v1.0.1  2013-09
    - fixes https://github.com/collectiveintel/libcif/issues/13
    - bugfix to configure.ac wrt protocol/
    - bugfix to -G flag
    - misc query nolog fixes

v1.0.0 2013-08-30
    - added send_keypairs function
    - bugfix to bin/cif

v1.0.0-rc.4 2013-07-10
    - misc bugfixes

0.99-RC3-00 2013-05
    - swiched bin/cif to use env instead of /usr/bin/perl (better for other UNIX's)
    - added no_decode and new_only flags to client (see doc)
    - added JSON STDIN support (for calling from cmdline or other langs)
    - added exclude_assessment filter flag to client (see doc)
    - repurposed -p 'raw' from json to native array struct
    - misc other fixes

0.99.06 2012-12
    - minor query fixes for md5 hashes
    - backported 'advanced config'
    - added log::dispatch init_logging functions
    - added asn query support
    - fixed a deprecated TLS bug in Transport/HTTP
    - added STDIN -i input to bin/cif
    - added send_json function to lib/CIF/Client/...
    - added two new flags, no_decode and new_only

0.99.05 2012-10-01
    - implemented cif-protocol perl bindings here
    - merged cif client libs here
    - added net-ssleay 1.43 as a dep (fixes threading)
    - refactored
    - misc bugfixes

0.99.04 2012-07-31
    - bugfixes

0.99.01 2012-04-27
    - initial release
    - contains old CIF::Utils functions (generate_uuid, etc)